<resources>
    <!--titles-->
    <string name="app_name">Tiles</string>
    <string name="made_by">brought to you by SHA</string>
    <string name="welcome">Let"'"s play</string>

    <!--High Scores-->
    <string name="classic_high_score">My Classic Mode\nHigh Scores</string>
    <string name="speedy_high_score">My Speedy Mode\nHigh Scores</string>
    <string name="moderate_high_score">My Moderate Mode\nHigh Scores</string>
    <string name="no_high_score">No High Scores</string>


    <!--instructions-->
    <string name="inst_title">How to play TILES:</string>
    <string name="instructions">Make words with 3 or more letters by using letters from the top of the board and from words you already created. Shake or tap "'"GET LETTER"'" to get another tile.</string>
    <string name="rules_title">Game rules:</string>
    <string name="rules">+ New words must contain at least one letter from the board\n+ When reusing a word from your list you must use all of its letters\n+ You may use several words from your list to make a new one\n+ Just adding the letter "'"S"'" to the end a word is not allowed\n+ You can have up to 8 tiles open at the top of the board, after that pressing GET LETTER will exchange one of the tiles randomly</string>
    <string name="score_instructions">+ After playing a word you will receive points according to the letter values in your word\n+ If you reuse an existing word, you get to keep the points you got for the original word\n+ 7 letter words or more will grant you with bonus points, 1 per letter!\n+ Requesting a tile from the bag or if your time runs up (on the speedy and moderate modes) will reduce a point from your score\n+ At the end of the game you will lose points for the tiles left on the board according to their value\n   </string>
    <string name="bubble_on_board">Create words with 3\nor more letters from\ntiles on the board</string>
    <string name="bubble_on_myWords">or reuse the words\nyou already made</string>
    <string name="classic_moderate_bubble_on_GetLetter">Can"'"t make a word?\nTap or *SHAKE* to get a\nletter and lose a point</string>
    <string name="speedy_bubble_to_timer">Every 5 seconds you \nwill get a letter \nand lose a point, \nunless you make a word</string>
    <string name="moderate_bubble_to_timer">Every 15 seconds you \nwill get a letter \nand lose a point, \nunless you make a word</string>
    <string name="bubble_to_score">7 letter words and up \nwill give you more \npoints</string>
    <string name="bubble_final">GOOD LUCK</string>
    <string name="show_bbl_instructions"><u>Show bubble\ninstructions</u></string>
    <string name="go_to_instructions">For detailed instructions <u>click here</u></string>
    <!--buttons-->
    <string name="get_letter">GET LETTER</string>
    <string name="best_move">BEST MOVE</string>
    <string name="end_game">END GAME</string>
    <string name="share_move">SHARE</string>
    <string name="new_game">NEW GAME</string>
    <string name="classic_game">Classic Game</string>
    <string name="moderate_game">Moderate Game</string>
    <string name="speedy_game">Speedy Game</string>


    <!--share-->
    <string name="share_score_title">TILES</string>
    <string name="share_score_1">"Check out my new score! I just made "</string>
    <string name="share_score_2">" points on TILES " </string>
    <string name="share_word_1">"I just got "</string>
    <string name="share_word_2">" points for "</string>
    <string name="share_word_3"> on TILES</string>
    <string name="share_classic">"classic mode! "</string>
    <string name="share_moderate">"moderate mode! "</string>
    <string name="share_speedy">"speedy mode! "</string>


    <!-- preferences-->
    <string name="animate_key">animate_key</string>
    <string name="animate_label">Show points animation</string>
    <string name="shake_key">shake_key</string>
    <string name="shake_label">Shake to get letter</string>
    <string name="prefs_true">Shown</string>
    <string name="prefs_false">Hidden</string>
    <string name="pop_up_correct_key">pop_up_correct</string>
    <string name="pop_up_correct_label">Pop-up for correct word</string>
    <string name="pop_up_wrong_key">pop_up_wrong</string>
    <string name="pop_up_wrong_label">Pop-up for wrong word</string>

    <!--count down timer-->
    <string name="speedy_seconds">05</string>
    <string name="moderate_seconds">15</string>

    <!--rate us-->

    <string name="rate_title">Enjoying Tiles?</string>
    <string name="rate_txt">Rate us on the app store</string>

    <!--others-->
    <string name="title_activity_history_of_word">HistoryOfWord</string>
    <string name="action_settings">Settings</string>


</resources>
