<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/tile_pattern"
    android:foregroundGravity="center_horizontal|center"
    android:orientation="vertical"
    tools:context="com.example.android.grabble_v4.HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginLeft="0dp"
        android:text="@string/welcome"
        android:textColor="@color/colorAccent"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/rootView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/welcomeRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
android:elevation="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/button_classic_game"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_border"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/classic_game"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/welcomeRecyclerView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintHorizontal_bias="0.494" />

    <Button
        android:id="@+id/button_speedy_game"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_border"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/speedy_game"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_classic_game"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_moderate_game"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_border"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/moderate_game"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_speedy_game"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center"
        android:gravity="bottom"
        android:paddingBottom="10dp"
        android:text="@string/made_by"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_moderate_game"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />




</android.support.constraint.ConstraintLayout>
